--- a/Styles/Layout.css
+++ b/Styles/Layout.css
@@ -109,7 +109,7 @@
         .navigation ul ul li a:hover {
             
             color: white;
-            background-color: #114bd4;
+            background-color: #ffffff;
         }
 
 .navigation ul ul ul {
