--- a/Styles/Layout.css
+++ b/Styles/Layout.css
@@ -1,162 +1,109 @@
+@import url(http://fonts.googleapis.com/css?family=Meddon);
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,400,300);
+@import url(http://weloveiconfonts.com/api/?family=entypo);
 
-.navbar-collapse collapse {
-    
-    width:50%;
-   
+/* entypo */
+[class*="entypo-"]:before {
+    font-family: 'entypo', sans-serif;
 }
 
-    .navigation ul {
-       
-        float: right;
-        margin-top: 10px;
-        padding: 0px;
-        min-width: 60%;
-        list-style: none;
+body {
+    background-color: #f2f2f2;
+}
+
+footer {
+    margin-top:20px;    
+    right:0;
+    bottom:0;
+    left:0;
+    background-color: #262626;
+    text-align: center;
+}
+
+ul li {
+    display: inline;
+}
+
+.social {
+    margin-top: 10px;
+}
+
+    .social ul li a {
+        padding: 10px 15px;
     }
 
+.copyright {
+    font-family: Oswald !important;
+    font-size: 18px !important;
+    font-weight: normal;
+    color: #fff;
+    margin-top: 12px;
+    text-align: left;
+}
 
-        .navigation ul li {
-            display: block;
-             vertical-align:central;
-        }
+.navbar {
+    background-color: #262626;
+    height: 55px;
+}
 
-            .navigation ul li a {
-               
-                display: block;
-                font-size: 14px;
-                text-transform: uppercase;
-                color: white;
-                font-weight: bold;
-                text-decoration: none;
-                padding: 15px 16px;
-            }
+.collapse {
+    background-color: #262626;
+}
 
-.navigation a {
-    display: block;
-    font-weight: bold;
+.navbar li a {
     text-decoration: none;
-    color: #000000;
+    font-family: Oswald !important;
+    font-size: 24px !important;
+    font-weight: normal;
+    color: #fff;
 }
 
-.navbar-brand a {
-    display: block;
-    font-weight: bold;
-    font-size: 28PX;
-    text-decoration: none;
-    color: #ffffff;
+    .navbar li a:hover {
+        border-radius: 10px;
+        color: #000;
+        background-color: #fff;
+    }
+
+    .navbar li a:focus {
+        border-radius: 10px;
+        color: #000;
+        background-color: #fff;
+    }
+
+.dropdown-menu {
+    background-color: #262626;
 }
 
-.navbar-brand p {
-    display: block;
-    font-weight: bold;
-    font-size: 16PX;
-    text-decoration: none;
-    color: #ffffff;
-    margin-top:10px;
-    
+.logo {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    text-align: center;
+    background-color: #fafafa;
 }
 
-.navigation a :hover {
-    color: #ffffff;
-}
+    .logo a {
+        text-decoration: none;
+        color: #262626;
+    }
 
-.navigation ul li > a:hover {
-    color: #1f1000;
-    background-color: white;
+    .logo h1 {
+        font-size: 48px !important;
+    }
+
+    .logo a h4 {
+        font-size: 24px !important;
+        color: #949494;
+    }
+
+.nav .open > a, .nav .open > a:focus, .nav .open > a:hover {
+    background-color: #fff !important;
+    color: #000;
     border-radius: 10px;
 }
-/*dropdown first level*/
-.navigation ul ul {
-    float: left;
-    width: 210px;
-    position: absolute;
-    left: 0px;
-    top: 100%;
-    background-color: #ffffff;
-    visibility: hidden;
-    opacity: 0;
-    margin: 0px 0px 0px 0px;
-    z-index: 10;
-    box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.1);
-    -moz-box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.1);
-    -webkit-box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.1);
-    transition: all 0.3s ease-in-out;
-    -moz-transition: all 0.3s ease-in-out;
-    -webkit-transition: all 0.3s ease-in-out;
+
+
+.icon-bar {
+    color: white;
+    background-color: white;
 }
 
-
-.navigation ul li:hover > ul {
-    display: block;
-    visibility: visible;
-    opacity: 100;
-    margin: 0px;
-}
-
-.navigation ul ul li {
-    width: 100%;
-}
-
-    .navigation ul ul li a {
-        
-        color:#1f1000;
-        font-weight: bold;
-        text-transform: inherit;
-        padding: 8px 20px;
-        text-transform: capitalize;
-    }
-
-        .navigation ul ul li a:hover {
-            
-            color: white;
-            background-color: #ffffff;
-        }
-
-.navigation ul ul ul {
-    left: 100%;
-    top: 0px;
-}
-
-label.copy {
-    margin-top: 13px;
-    font-size: 15px;
-}
-
-.social a {
-    margin-top: 6px;
-    width: 35px;
-    height: 35px;
-    text-align: center;
-    padding: 3px 0;
-    display: inline-block;
-    font-size: 22px;
-    color: #fff;
-    overflow: hidden;
-    position: relative;
-    z-index: 11;
-}
-
-.fb-bg1 {
-    background-color: #3b5997;
-}
-
-
-.linkedin-bg1 {
-    background-color: #5182aa;
-}
-
-.tw-bg1 {
-    background-color: #00aceb;
-}
-
-.gp-bg1 {
-    background-color: #990000;
-}
-
-.navbar-toggle .icon-bar {
-    display: block;
-    width: 22px;
-    height: 2px;
-    background-color: #cccccc;
-    border-radius: 1px;
-}
