--- a/Styles/style.css
+++ b/Styles/style.css
@@ -97,7 +97,7 @@ h5 {
 .sidebar {
   text-align: left;
   color: #ffffff;
-  background-color: #5da4d9;
+  background-color: #21626f;
   overflow: hidden;
   display: block;
 }
@@ -277,7 +277,7 @@ h5 {
   color: #767270;
 }
 .custom-content-wrapper span {
-  color: #5da4d9;
+  color: #21626f;
   margin-top: 0px;
   font-size: 10pt;
   line-height: 15pt;
@@ -300,7 +300,7 @@ h5 {
   width: 19%;
 }
 .interests ul li .fa {
-  color: #5da4d9;
+  color: #21626f;
   text-align: left;
 }
 /* style for
@@ -317,7 +317,7 @@ h5 {
   line-height: 18pt;
 }
 .website span a {
-  color: #5da4d9;
+  color: #21626f;
   word-wrap: break-word;
 }
 /* style for
@@ -497,21 +497,7 @@ textarea.materialize-textarea:focus:not([readonly]) + label {
   text-align: left !important;
   margin: 0 0 0 0 !important;
 }
-.btn.disabled {
-  background-color: #5da4d9;
-  color: #fff;
-  cursor: default;
-}
-.btn.disabled:focus {
-  background-color: #5da4d9;
-  color: #fff;
-  cursor: default;
-}
-.btn.disabled:hover {
-  background-color: #5da4d9;
-  color: #fff;
-  cursor: default;
-}
+
 #msgSubmit {
   font-size: 20px;
   margin-bottom: 20px;
@@ -520,9 +506,7 @@ textarea.materialize-textarea:focus:not([readonly]) + label {
 .text-danger {
   color: red;
 }
-.text-success {
-  color: #5da4d9 ;
-}
+
 
 .portfolio-nav ul {
   margin: 30px;
